chore: advances in written part

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -15,3 +15,36 @@
 	Title = {Video of Chuck Norris walking on water},
 	url = {http://www.youtube.com/nonexistentlink}
 }
+
+#did-core
+ @misc{sporny_longley_sabadello_reed_steele_2021,
+  title     = {Decentralized identifiers (dids) v1.0},
+  url       = {https://www.w3.org/TR/did-core/},
+  journal   = {Decentralized Identifiers (DIDs) v1.0},
+  publisher = {W3C},
+  author    = {Sporny, Manu and Longley, Dave and Sabadello, Markus and Reed, Drummond and Steele, Orie},
+  year      = {2021},
+  month     = {Aug}
+} 
+
+# ActivityPub
+ @misc{lemmer-webber_tallon_guy_prodromou_2018,
+  title     = {1.1 Social Web Working Group},
+  url       = {https://www.w3.org/TR/activitypub},
+  journal   = {ActivityPub},
+  publisher = {W3C},
+  author    = {Lemmer-Webber, Christine and Tallon, Jessica and Guy, Amy and Prodromou, Evan},
+  year      = {2018},
+  month     = {Jan}
+} 
+
+#Web of Trust (Other approach)
+ @misc{webber_sporny_2017,
+  title     = {ActivityPub: From decentralized to distributed social networks},
+  url       = {https://github.com/WebOfTrustInfo/rwot5-boston/blob/fcbc33835c1b76b7526a8a82cd9cac9c23828711/final-documents/activitypub-decentralized-distributed.pdf},
+  journal   = {Rebooting Web-of-Trust},
+  publisher = {Web of Trust},
+  author    = {Webber, Christopher and Sporny, Manu},
+  year      = {2017},
+  month     = {Dec}
+} 
